tweaked the api to return an inventory item on posting in order to reload the page dynamically without errors when following the link to the next page

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,5 +1,17 @@
 .p-menubar{
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   width: 100%;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.p-inputtext{
+  height: 50px;
+  width: 500px;
+}
+
+.p-float-label{
+  height:fit-content;
+  margin-top: 30px;
 }
