tweaked the code to use make things more readable; Finished day 2 all basic requirements met. Need to implement the register page with better css

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -7,11 +7,20 @@
 }
 
 .p-inputtext{
-  height: 50px;
-  width: 500px;
+  width: 552px;
+  height: fit-content;
 }
 
 .p-float-label{
   height:fit-content;
   margin-top: 30px;
+}
+.p-password{
+  width: 100vw;
+}
+.content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
 }
