--- a/client/src/css/ItemDetails.css
+++ b/client/src/css/ItemDetails.css
@@ -4,3 +4,17 @@
   align-items: center;
   margin-top: 100px;
 }
+.card{
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+.p-card{
+  margin-top: 100px;
+  width: 600px;
+}
+.ItemActions{
+  display: flex;
+  justify-content: space-around;
+  width: 100px;
+}
